[workspace]
resolver = "2"
members = ["crates/db", "crates/cluster", "."]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
object_store = "0.11.2"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lz4_flex = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tempfile = "3.13"
rusqlite = { version = "0.32", features = ["bundled", "session", "buildtime_bindgen"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio-stream = "0.1"
dashmap = "6"
uuid = { version = "1.10", features = ["v4"] }

[package]
name = "lbc"
description = "Replicated SQLite cluster over an object store"
version.workspace = true
edition.workspace = true

[dependencies]
lbc-cluster = { path = "crates/cluster" }
lbc-db = { path = "crates/db" }

[dev-dependencies]
object_store = { workspace = true, features = ["aws"] }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
askama = "0.16"
axum = "0.7"
serde = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
tempfile = { workspace = true }
url = "2"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

[[example]]
name = "demo"
path = "examples/demo/main.rs"
